Fix spacing for page header when in form context
clean up comments in buttons
fix typo in error summary comment

--- a/src/components/button/_button-group.scss
+++ b/src/components/button/_button-group.scss
@@ -53,10 +53,3 @@
         }
     }
 }
-
-/*
-// When there is no margin collapse reduce size of top margin
-fieldset + .ds_button-group {
-    @include ds_responsive-margin(4, top, $collapse-spacing-unit: 3);
-}
-*/
